log/nodejs/nodejs_api_error.log
2025-09-23T11:22:31.350Z [error] : uncaughtException: Unexpected token ','
/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/controllers/tags.controller.js:54
                .send(commonHelper.parseSuccessRespose(result.data,, "Tags  displayed successfully"));
                                                                   ^

SyntaxError: Unexpected token ','
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/routes/tags.routes.js:3:24) {"error":{},"stack":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/controllers/tags.controller.js:54\n                .send(commonHelper.parseSuccessRespose(result.data,, \"Tags  displayed successfully\"));\n                                                                   ^\n\nSyntaxError: Unexpected token ','\n    at wrapSafe (node:internal/modules/cjs/loader:1638:18)\n    at Module._compile (node:internal/modules/cjs/loader:1680:20)\n    at Object..js (node:internal/modules/cjs/loader:1839:10)\n    at Module.load (node:internal/modules/cjs/loader:1441:32)\n    at Function._load (node:internal/modules/cjs/loader:1263:12)\n    at TracingChannel.traceSync (node:diagnostics_channel:322:14)\n    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)\n    at Module.require (node:internal/modules/cjs/loader:1463:12)\n    at require (node:internal/modules/helpers:147:16)\n    at Object.<anonymous> (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/routes/tags.routes.js:3:24)","exception":true,"date":"Tue Sep 23 2025 16:52:31 GMT+0530 (India Standard Time)","process":{"pid":68753,"uid":1000,"gid":1000,"cwd":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api","execPath":"/home/acewebx/.nvm/versions/node/v22.19.0/bin/node","version":"v22.19.0","argv":["/home/acewebx/.nvm/versions/node/v22.19.0/bin/node","/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/index.js"],"memoryUsage":{"rss":154882048,"heapTotal":89694208,"heapUsed":71277872,"external":6207174,"arrayBuffers":3749257}},"os":{"loadavg":[2.09,2.44,2.32],"uptime":26423.2},"trace":[{"column":18,"file":"node:internal/modules/cjs/loader","function":"wrapSafe","line":1638,"method":null,"native":false},{"column":20,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1680,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Object..js","line":1839,"method":".js","native":false},{"column":32,"file":"node:internal/modules/cjs/loader","function":"Module.load","line":1441,"method":"load","native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Function._load","line":1263,"method":"_load","native":false},{"column":14,"file":"node:diagnostics_channel","function":"TracingChannel.traceSync","line":322,"method":"traceSync","native":false},{"column":24,"file":"node:internal/modules/cjs/loader","function":"wrapModuleLoad","line":237,"method":null,"native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module.require","line":1463,"method":"require","native":false},{"column":16,"file":"node:internal/modules/helpers","function":"require","line":147,"method":null,"native":false},{"column":24,"file":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/routes/tags.routes.js","function":null,"line":3,"method":null,"native":false}]}
2025-09-23T11:22:35.987Z [error] : uncaughtException: Unexpected token ','
/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/controllers/tags.controller.js:54
                .send(commonHelper.parseSuccessRespose(tagsresult.data,, "Tags  displayed successfully"));
                                                                       ^

SyntaxError: Unexpected token ','
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/routes/tags.routes.js:3:24) {"error":{},"stack":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/controllers/tags.controller.js:54\n                .send(commonHelper.parseSuccessRespose(tagsresult.data,, \"Tags  displayed successfully\"));\n                                                                       ^\n\nSyntaxError: Unexpected token ','\n    at wrapSafe (node:internal/modules/cjs/loader:1638:18)\n    at Module._compile (node:internal/modules/cjs/loader:1680:20)\n    at Object..js (node:internal/modules/cjs/loader:1839:10)\n    at Module.load (node:internal/modules/cjs/loader:1441:32)\n    at Function._load (node:internal/modules/cjs/loader:1263:12)\n    at TracingChannel.traceSync (node:diagnostics_channel:322:14)\n    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)\n    at Module.require (node:internal/modules/cjs/loader:1463:12)\n    at require (node:internal/modules/helpers:147:16)\n    at Object.<anonymous> (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/routes/tags.routes.js:3:24)","exception":true,"date":"Tue Sep 23 2025 16:52:35 GMT+0530 (India Standard Time)","process":{"pid":68817,"uid":1000,"gid":1000,"cwd":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api","execPath":"/home/acewebx/.nvm/versions/node/v22.19.0/bin/node","version":"v22.19.0","argv":["/home/acewebx/.nvm/versions/node/v22.19.0/bin/node","/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/index.js"],"memoryUsage":{"rss":155271168,"heapTotal":89694208,"heapUsed":71313104,"external":6207174,"arrayBuffers":3749257}},"os":{"loadavg":[1.92,2.4,2.31],"uptime":26427.84},"trace":[{"column":18,"file":"node:internal/modules/cjs/loader","function":"wrapSafe","line":1638,"method":null,"native":false},{"column":20,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1680,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Object..js","line":1839,"method":".js","native":false},{"column":32,"file":"node:internal/modules/cjs/loader","function":"Module.load","line":1441,"method":"load","native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Function._load","line":1263,"method":"_load","native":false},{"column":14,"file":"node:diagnostics_channel","function":"TracingChannel.traceSync","line":322,"method":"traceSync","native":false},{"column":24,"file":"node:internal/modules/cjs/loader","function":"wrapModuleLoad","line":237,"method":null,"native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module.require","line":1463,"method":"require","native":false},{"column":16,"file":"node:internal/modules/helpers","function":"require","line":147,"method":null,"native":false},{"column":24,"file":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/routes/tags.routes.js","function":null,"line":3,"method":null,"native":false}]}
